<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall"
    tools:context=".MainActivity">

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="156dp"
        android:layout_marginBottom="472dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/video_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="33dp"
        android:hint="@string/add_desc"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/choose_video_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoView" />

    <Button
        android:id="@+id/upload_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:text="@string/upload_vid"
        app:backgroundTint="@color/green"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/choose_video_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/choose_video_button"
        app:layout_constraintTop_toTopOf="@+id/choose_video_button"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/choose_video_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginEnd="67dp"
        android:layout_marginRight="67dp"
        android:layout_marginBottom="232dp"
        app:backgroundTint="@color/green"
        android:textColor="@color/black"
        android:text="@string/choose_a_vid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/upload_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/video_name"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>