<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall"
    android:gravity="center"
    tools:context=".SplashScreen">


    <Button
        android:id="@+id/rety"
        android:layout_width="335dp"
        android:layout_height="44dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="612dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="75dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/retry"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:backgroundTint="@color/light_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="281dp"
        android:layout_height="279dp"

        android:layout_gravity="center_horizontal"
        android:layout_marginStart="65dp"

        android:layout_marginTop="65dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="387dp"
        android:contentDescription="@string/todo"
        android:gravity="center"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/croppedlogo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="528dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="176dp"
        android:fontFamily="sans-serif"
        android:text="@string/splash_connection"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="337dp"
        android:text="Workshop+"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>